--- a/package-index/index.html
+++ b/package-index/index.html
@@ -14,6 +14,19 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch_mlir_core-20230310.773-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230310.773-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch_mlir_core-20230310.773-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230310.773-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch_mlir_core-20230310.773-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230310.773-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch-2.1.0.dev20230310%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch-2.1.0.dev20230310%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir-20230310.105-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230310.105-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir-20230310.105-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230310.105-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir-20230310.105-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230310.105-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir-20230310.105-cp311-cp311-win_amd64.whl'>torch_mlir-20230310.105-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir-20230310.105-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230310.105-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir_core-20230310.105-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230310.105-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir_core-20230310.105-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230310.105-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/oneshot-20230310.105/torch_mlir_core-20230310.105-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230310.105-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230308+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230308+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230309.772/torch-2.1.0.dev20230308%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230308+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -288,9 +301,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230215.750-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp311-cp311-win_amd64.whl'>torch_mlir-20230215.750-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230215.750-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230214.749/torch-2.0.0.dev20230212%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230212+cpu-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230214.749/torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230214.749/torch_mlir-20230214.749-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230214.749-cp311-cp311-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230214.749/torch_mlir-20230214.749-cp311-cp311-win_amd64.whl'>torch_mlir-20230214.749-cp311-cp311-win_amd64.whl</a><br />
   </body>
 </html>
