--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch-2.1.0.dev20230310%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch-2.1.0.dev20230310%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir-20230311.774-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230311.774-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir-20230311.774-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230311.774-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir-20230311.774-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230311.774-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir-20230311.774-cp311-cp311-win_amd64.whl'>torch_mlir-20230311.774-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir-20230311.774-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230311.774-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir_core-20230311.774-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230311.774-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir_core-20230311.774-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230311.774-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230311.774/torch_mlir_core-20230311.774-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230311.774-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch-2.1.0.dev20230309%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230309+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch-2.1.0.dev20230309%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230309+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230310.773/torch-2.1.0.dev20230309%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230309+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -291,15 +304,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230216.751/torch_mlir-20230216.751-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230216.751-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230216.751/torch_mlir-20230216.751-cp311-cp311-win_amd64.whl'>torch_mlir-20230216.751-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230216.751/torch_mlir-20230216.751-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230216.751-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch-2.0.0.dev20230212%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch-2.0.0.dev20230212%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch-2.0.0.dev20230212%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230212+cpu-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch-2.0.0.dev20230212%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230215.750-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230215.750-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230215.750-cp311-cp311-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp311-cp311-win_amd64.whl'>torch_mlir-20230215.750-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230215.750/torch_mlir-20230215.750-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230215.750-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
