--- a/package-index/index.html
+++ b/package-index/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch-2.1.0.dev20230310%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch-2.1.0.dev20230310%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl'>torch-2.1.0.dev20230310-cp311-none-macosx_10_9_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir-20230313.776-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230313.776-cp310-cp310-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir-20230313.776-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230313.776-cp311-cp311-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir-20230313.776-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230313.776-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir-20230313.776-cp311-cp311-win_amd64.whl'>torch_mlir-20230313.776-cp311-cp311-win_amd64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir-20230313.776-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230313.776-cp38-cp38-linux_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir_core-20230313.776-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir_core-20230313.776-cp311-cp311-macosx_11_0_universal2.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir_core-20230313.776-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl'>torch_mlir_core-20230313.776-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br />
+    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230313.776/torch_mlir_core-20230313.776-cp311-cp311-win_amd64.whl'>torch_mlir_core-20230313.776-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230312.775/torch-2.1.0.dev20230310%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp310-cp310-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230312.775/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-linux_x86_64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230312.775/torch-2.1.0.dev20230310%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.1.0.dev20230310+cpu-cp311-cp311-win_amd64.whl</a><br />
@@ -297,15 +310,5 @@
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230218.753/torch_mlir-20230218.753-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230218.753-cp311-cp311-macosx_11_0_universal2.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230218.753/torch_mlir-20230218.753-cp311-cp311-win_amd64.whl'>torch_mlir-20230218.753-cp311-cp311-win_amd64.whl</a><br />
     <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230218.753/torch_mlir-20230218.753-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230218.753-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch-2.0.0.dev20230212%2Bcpu-cp310-cp310-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch-2.0.0.dev20230212%2Bcpu-cp311-cp311-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch-2.0.0.dev20230212%2Bcpu-cp311-cp311-win_amd64.whl'>torch-2.0.0.dev20230212+cpu-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch-2.0.0.dev20230212%2Bcpu-cp38-cp38-linux_x86_64.whl'>torch-2.0.0.dev20230212+cpu-cp38-cp38-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl'>torch-2.0.0.dev20230212-cp311-none-macosx_10_9_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch_mlir-20230217.752-cp310-cp310-linux_x86_64.whl'>torch_mlir-20230217.752-cp310-cp310-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch_mlir-20230217.752-cp311-cp311-linux_x86_64.whl'>torch_mlir-20230217.752-cp311-cp311-linux_x86_64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch_mlir-20230217.752-cp311-cp311-macosx_11_0_universal2.whl'>torch_mlir-20230217.752-cp311-cp311-macosx_11_0_universal2.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch_mlir-20230217.752-cp311-cp311-win_amd64.whl'>torch_mlir-20230217.752-cp311-cp311-win_amd64.whl</a><br />
-    <a href='https://github.com/llvm/torch-mlir/releases/download/snapshot-20230217.752/torch_mlir-20230217.752-cp38-cp38-linux_x86_64.whl'>torch_mlir-20230217.752-cp38-cp38-linux_x86_64.whl</a><br />
   </body>
 </html>
